# tmux-ps

./: .gitignore  Cargo.toml  README.md  claude.md  install.sh  profile-tmux-ps.sh  tmux-ps
src/: main.rs
tmux-claude/: Cargo.toml  install.sh
tmux-claude/hooks/: tmux-claude-hook.sh
tmux-claude/services/: com.tmux-claude.daemon.plist  tmux-claude-daemon.service
tmux-claude/src/: main.rs
tmux-claude/src/common/: chrome.rs  debug.rs  jsonl.rs  mod.rs  persistence.rs  ports.rs  process.rs  tmux.rs  types.rs
tmux-claude/src/daemon/: hooks.rs  mod.rs  notifier.rs  server.rs  state.rs
tmux-claude/src/ipc/: messages.rs  mod.rs
tmux-claude/src/tui/: app.rs  client.rs  mod.rs  ui.rs
tmux-ps/: Cargo.toml  install.sh
