[package]
name = "tmux-claude"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tmux-claude"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[dependencies]
sysinfo = "0.32"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30"
anyhow = "1.0"
chrono = "0.4"
crossterm = "0.28"
dirs = "5"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["rt-multi-thread", "net", "sync", "io-util", "macros", "time", "fs"] }
libproc = "0.14"
